Reorged paper and decks

--- a/TalksPublications/MidcurveNN_LaTeX/Main_MidcurveLLM_CheatSheet.tex
+++ b/TalksPublications/MidcurveNN_LaTeX/Main_MidcurveLLM_CheatSheet.tex
@@ -5,11 +5,11 @@
 
 
 \begin{center}
-\Large{\textbf{Deep Learning for Geometric Algorithms: Midcurve, a case study \\ Yogesh Haribhau Kulkarni}}  
+\Large{\textbf{MindcurveLLM: Geometric Dimension Reduction using Large Language Models\\ Yogesh Haribhau Kulkarni}}  
 \end{center}
 
 \begin{multicols}{2}
-\input{seminar_midcurvellm_content}
+\input{midcurvellm_slides_content}
 \end{multicols}
 
 \rule{\linewidth}{0.25pt}
