--- a/TalksPublications/MidcurveNN_LaTeX/Main_MidcurveLLM_Presentation.tex
+++ b/TalksPublications/MidcurveNN_LaTeX/Main_MidcurveLLM_Presentation.tex
@@ -1,8 +1,8 @@
 \documentclass[xcolor=dvipsnames,compress,t,pdf,9pt]{beamer}
 \input{template_presentation}
 \graphicspath{{images/}}
-\title[\insertframenumber /\inserttotalframenumber]{Deep Learning for Geometric Algorithms}
-\subtitle[]{Midcurve, a case study}
+\title[\insertframenumber /\inserttotalframenumber]{MindcurveLLM: Geometric Dimension Reduction using Large Language Models}
+\subtitle[]{}
 
 
 \begin{document}
@@ -13,7 +13,7 @@
 	\end{frame}
 	
 %	\input{AboutMe}
-	\input{seminar_midcurvenn_content}
+	\input{midcurvellm_slides_content}
 	
 	\begin{frame}[c]{}
 	Thanks ...
